--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
             <meta content="IE=edge" http-equiv="X-UA-Compatible">
                 <title>
-                    hola Edmundo
+                    Hola Edmundobhunjkl
                 </title>
                 <link href="" rel="stylesheet">
                 </link>
